--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,3 +19,10 @@ workflows:
           version: '16.10'
           # If you are using yarn, change the line below from "npm" to "yarn"
           pkg-manager: npm
+
+          docker:
+             - image: circleci/mongo:4.2.0
+             - run:
+                  name: MongoDB Install
+                  command: |
+                     sudo apt-get install -y mongodb
