--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,8 @@ version: 2.1
 orbs:
   node: circleci/node@4.7
 
+docker:
+  image: 'circleci/mongo:latest'
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
@@ -19,10 +21,3 @@ workflows:
           version: '16.10'
           # If you are using yarn, change the line below from "npm" to "yarn"
           pkg-manager: npm
-
-          docker:
-             - image: circleci/mongo:4.2.0
-             - run:
-                  name: MongoDB Install
-                  command: |
-                     sudo apt-get install -y mongodb
