--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,8 +6,12 @@ version: 2.1
 orbs:
   node: circleci/node@4.7
 
-docker:
-  image: 'circleci/mongo:latest'
+jobs:
+  nodejs:
+    docker:
+      - image: 'circleci/node:latest'
+    steps:
+      - checkout
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
