--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,12 +6,41 @@ version: 2.1
 orbs:
   node: circleci/node@4.7
 
+jobs:
+  mongo:
+    docker:
+      - image: circleci/node:12-browsers
+      - image: circleci/mongo:4.4
+        environment:
+          MONGO_USERNAME: qq596819255@gmail.com
+          MONGO_PASSWORD: zhl0019@
+    steps:
+      - run:
+          name: MongoDB Install
+          command: |
+             sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 9DA31620334BD75D9DCB49F368818C72E52529D4
+             echo "deb [ arch=amd64 ] https://repo.mongodb.org/apt/ubuntu bionic/mongodb-org/4.0 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-4.0.list
+             sudo apt-get update
+             sudo apt-get install -y mongodb-org-shell
+      - setup_remote_docker
+      - run:
+          name: Waiting for Mongo
+          command: dockerize -wait tcp://localhost:27017 -timeout 1m
+      - checkout
+      - run:
+          name: Get versions
+          command: |
+              node -v
+              npm -v
+              mongo -v
+              mongo localhost --eval "db.version()"
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
   sample: # This is the name of the workflow, feel free to change it to better match your workflow.
     # Inside the workflow, you define the jobs you want to run.
     jobs:
+      - mongo
       - node/test:
           # This is the node version to use for the `cimg/node` tag
           # Relevant tags can be found on the CircleCI Developer Hub
