--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "test": "jest --watchAll",
+    "test": "jest",
     "start": "node server.js"
   },
   "preset": "@shelf/jest-mongodb",
