--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
     docker:
       - image: circleci/node:12.10
       - image: mongo:4.2.0
+      - image: cimg/python:3.10.2
     steps:
       - checkout
       - restore_cache:
